sofa-platform/src/main/cpp/src/sofa.h

SOFAExport void iauBpn2xy(double rbpn[3][3], double *x, double *y);
SOFAExport void iauC2i00a(double date1, double date2, double rc2i[3][3]);
SOFAExport void iauC2i00b(double date1, double date2, double rc2i[3][3]);
SOFAExport void iauC2i06a(double date1, double date2, double rc2i[3][3]);
SOFAExport void iauC2ibpn(double date1, double date2, double rbpn[3][3], double rc2i[3][3]);
SOFAExport void iauC2ixy(double date1, double date2, double x, double y, double rc2i[3][3]);
SOFAExport void iauC2ixys(double x, double y, double s, double rc2i[3][3]);
SOFAExport void iauC2t00a(double tta, double ttb, double uta, double utb, double xp, double yp, double rc2t[3][3]);
SOFAExport void iauC2t00b(double tta, double ttb, double uta, double utb, double xp, double yp, double rc2t[3][3]);
SOFAExport void iauC2t06a(double tta, double ttb, double uta, double utb, double xp, double yp, double rc2t[3][3]);
SOFAExport void iauC2tcio(double rc2i[3][3], double era, double rpom[3][3], double rc2t[3][3]);
SOFAExport void iauC2teqx(double rbpn[3][3], double gst, double rpom[3][3], double rc2t[3][3]);
SOFAExport void iauC2tpe(double tta, double ttb, double uta, double utb, double dpsi, double deps, double xp, double yp, double rc2t[3][3]);
SOFAExport void iauC2txy(double tta, double ttb, double uta, double utb, double x, double y, double xp, double yp, double rc2t[3][3]);
SOFAExport double iauEo06a(double date1, double date2);
SOFAExport double iauEors(double rnpb[3][3], double s);
SOFAExport void iauFw2m(double gamb, double phib, double psi, double eps, double r[3][3]);
SOFAExport void iauFw2xy(double gamb, double phib, double psi, double eps, double *x, double *y);
SOFAExport void iauNum00a(double date1, double date2, double rmatn[3][3]);
SOFAExport void iauNum00b(double date1, double date2, double rmatn[3][3]);
SOFAExport void iauNum06a(double date1, double date2, double rmatn[3][3]);
SOFAExport void iauNumat(double epsa, double dpsi, double deps, double rmatn[3][3]);
SOFAExport void iauNut00a(double date1, double date2, double *dpsi, double *deps);
SOFAExport void iauNut00b(double date1, double date2, double *dpsi, double *deps);
SOFAExport void iauNut06a(double date1, double date2, double *dpsi, double *deps);
SOFAExport void iauNut80(double date1, double date2, double *dpsi, double *deps);
SOFAExport void iauNutm80(double date1, double date2, double rmatn[3][3]);
SOFAExport double iauObl06(double date1, double date2);