sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

	/**
	 * Original signature : <code>void iauBpn2xy(double[3][3], double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:65</i>
	 */
	public static void iauBpn2xy(Pointer<Double > rbpn, Pointer<Double > x, Pointer<Double > y) {
		iauBpn2xy(Pointer.getPeer(rbpn), Pointer.getPeer(x), Pointer.getPeer(y));
	}
	protected native static void iauBpn2xy(@Ptr long rbpn, @Ptr long x, @Ptr long y);
	/**
	 * Original signature : <code>void iauC2i00a(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:67</i>
	 */
	public static void iauC2i00a(double date1, double date2, Pointer<Double > rc2i) {
		iauC2i00a(date1, date2, Pointer.getPeer(rc2i));
	}
	protected native static void iauC2i00a(double date1, double date2, @Ptr long rc2i);
	/**
	 * Original signature : <code>void iauC2i00b(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:69</i>
	 */
	public static void iauC2i00b(double date1, double date2, Pointer<Double > rc2i) {
		iauC2i00b(date1, date2, Pointer.getPeer(rc2i));
	}
	protected native static void iauC2i00b(double date1, double date2, @Ptr long rc2i);
	/**
	 * Original signature : <code>void iauC2i06a(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:71</i>
	 */
	public static void iauC2i06a(double date1, double date2, Pointer<Double > rc2i) {
		iauC2i06a(date1, date2, Pointer.getPeer(rc2i));
	}
	protected native static void iauC2i06a(double date1, double date2, @Ptr long rc2i);
	/**
	 * Original signature : <code>void iauC2ibpn(double, double, double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:73</i>
	 */
	public static void iauC2ibpn(double date1, double date2, Pointer<Double > rbpn, Pointer<Double > rc2i) {
		iauC2ibpn(date1, date2, Pointer.getPeer(rbpn), Pointer.getPeer(rc2i));
	}
	protected native static void iauC2ibpn(double date1, double date2, @Ptr long rbpn, @Ptr long rc2i);
	/**
	 * Original signature : <code>void iauC2ixy(double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:75</i>
	 */
	public static void iauC2ixy(double date1, double date2, double x, double y, Pointer<Double > rc2i) {
		iauC2ixy(date1, date2, x, y, Pointer.getPeer(rc2i));
	}
	protected native static void iauC2ixy(double date1, double date2, double x, double y, @Ptr long rc2i);
	/**
	 * Original signature : <code>void iauC2ixys(double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:77</i>
	 */
	public static void iauC2ixys(double x, double y, double s, Pointer<Double > rc2i) {
		iauC2ixys(x, y, s, Pointer.getPeer(rc2i));
	}
	protected native static void iauC2ixys(double x, double y, double s, @Ptr long rc2i);
	/**
	 * Original signature : <code>void iauC2t00a(double, double, double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:79</i>
	 */
	public static void iauC2t00a(double tta, double ttb, double uta, double utb, double xp, double yp, Pointer<Double > rc2t) {
		iauC2t00a(tta, ttb, uta, utb, xp, yp, Pointer.getPeer(rc2t));
	}
	protected native static void iauC2t00a(double tta, double ttb, double uta, double utb, double xp, double yp, @Ptr long rc2t);
	/**
	 * Original signature : <code>void iauC2t00b(double, double, double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:81</i>
	 */
	public static void iauC2t00b(double tta, double ttb, double uta, double utb, double xp, double yp, Pointer<Double > rc2t) {
		iauC2t00b(tta, ttb, uta, utb, xp, yp, Pointer.getPeer(rc2t));
	}
	protected native static void iauC2t00b(double tta, double ttb, double uta, double utb, double xp, double yp, @Ptr long rc2t);
	/**
	 * Original signature : <code>void iauC2t06a(double, double, double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:83</i>
	 */
	public static void iauC2t06a(double tta, double ttb, double uta, double utb, double xp, double yp, Pointer<Double > rc2t) {
		iauC2t06a(tta, ttb, uta, utb, xp, yp, Pointer.getPeer(rc2t));
	}
	protected native static void iauC2t06a(double tta, double ttb, double uta, double utb, double xp, double yp, @Ptr long rc2t);
	/**
	 * Original signature : <code>void iauC2tcio(double[3][3], double, double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:85</i>
	 */
	public static void iauC2tcio(Pointer<Double > rc2i, double era, Pointer<Double > rpom, Pointer<Double > rc2t) {
		iauC2tcio(Pointer.getPeer(rc2i), era, Pointer.getPeer(rpom), Pointer.getPeer(rc2t));
	}
	protected native static void iauC2tcio(@Ptr long rc2i, double era, @Ptr long rpom, @Ptr long rc2t);
	/**
	 * Original signature : <code>void iauC2teqx(double[3][3], double, double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:87</i>
	 */
	public static void iauC2teqx(Pointer<Double > rbpn, double gst, Pointer<Double > rpom, Pointer<Double > rc2t) {
		iauC2teqx(Pointer.getPeer(rbpn), gst, Pointer.getPeer(rpom), Pointer.getPeer(rc2t));
	}
	protected native static void iauC2teqx(@Ptr long rbpn, double gst, @Ptr long rpom, @Ptr long rc2t);
	/**
	 * Original signature : <code>void iauC2tpe(double, double, double, double, double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:89</i>
	 */
	public static void iauC2tpe(double tta, double ttb, double uta, double utb, double dpsi, double deps, double xp, double yp, Pointer<Double > rc2t) {
		iauC2tpe(tta, ttb, uta, utb, dpsi, deps, xp, yp, Pointer.getPeer(rc2t));
	}
	protected native static void iauC2tpe(double tta, double ttb, double uta, double utb, double dpsi, double deps, double xp, double yp, @Ptr long rc2t);
	/**
	 * Original signature : <code>void iauC2txy(double, double, double, double, double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:91</i>
	 */
	public static void iauC2txy(double tta, double ttb, double uta, double utb, double x, double y, double xp, double yp, Pointer<Double > rc2t) {
		iauC2txy(tta, ttb, uta, utb, x, y, xp, yp, Pointer.getPeer(rc2t));
	}
	protected native static void iauC2txy(double tta, double ttb, double uta, double utb, double x, double y, double xp, double yp, @Ptr long rc2t);
	/**
	 * Original signature : <code>double iauEo06a(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:93</i>
	 */
	native public static double iauEo06a(double date1, double date2);
	/**
	 * Original signature : <code>double iauEors(double[3][3], double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:95</i>
	 */
	public static double iauEors(Pointer<Double > rnpb, double s) {
		return iauEors(Pointer.getPeer(rnpb), s);
	}
	protected native static double iauEors(@Ptr long rnpb, double s);
	/**
	 * Original signature : <code>void iauFw2m(double, double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:97</i>
	 */
	public static void iauFw2m(double gamb, double phib, double psi, double eps, Pointer<Double > r) {
		iauFw2m(gamb, phib, psi, eps, Pointer.getPeer(r));
	}
	protected native static void iauFw2m(double gamb, double phib, double psi, double eps, @Ptr long r);
	/**
	 * Original signature : <code>void iauFw2xy(double, double, double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:99</i>
	 */
	public static void iauFw2xy(double gamb, double phib, double psi, double eps, Pointer<Double > x, Pointer<Double > y) {
		iauFw2xy(gamb, phib, psi, eps, Pointer.getPeer(x), Pointer.getPeer(y));
	}
	protected native static void iauFw2xy(double gamb, double phib, double psi, double eps, @Ptr long x, @Ptr long y);
	/**
	 * Original signature : <code>void iauNum00a(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:101</i>
	 */
	public static void iauNum00a(double date1, double date2, Pointer<Double > rmatn) {
		iauNum00a(date1, date2, Pointer.getPeer(rmatn));
	}
	protected native static void iauNum00a(double date1, double date2, @Ptr long rmatn);
	/**
	 * Original signature : <code>void iauNum00b(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:103</i>
	 */
	public static void iauNum00b(double date1, double date2, Pointer<Double > rmatn) {
		iauNum00b(date1, date2, Pointer.getPeer(rmatn));
	}
	protected native static void iauNum00b(double date1, double date2, @Ptr long rmatn);
	/**
	 * Original signature : <code>void iauNum06a(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:105</i>
	 */
	public static void iauNum06a(double date1, double date2, Pointer<Double > rmatn) {
		iauNum06a(date1, date2, Pointer.getPeer(rmatn));
	}
	protected native static void iauNum06a(double date1, double date2, @Ptr long rmatn);
	/**
	 * Original signature : <code>void iauNumat(double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:107</i>
	 */
	public static void iauNumat(double epsa, double dpsi, double deps, Pointer<Double > rmatn) {
		iauNumat(epsa, dpsi, deps, Pointer.getPeer(rmatn));
	}
	protected native static void iauNumat(double epsa, double dpsi, double deps, @Ptr long rmatn);
	/**
	 * Original signature : <code>void iauNut00a(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:109</i>
	 */
	public static void iauNut00a(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps) {
		iauNut00a(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps));
	}
	protected native static void iauNut00a(double date1, double date2, @Ptr long dpsi, @Ptr long deps);
	/**
	 * Original signature : <code>void iauNut00b(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:111</i>
	 */
	public static void iauNut00b(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps) {
		iauNut00b(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps));
	}
	protected native static void iauNut00b(double date1, double date2, @Ptr long dpsi, @Ptr long deps);
	/**
	 * Original signature : <code>void iauNut06a(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:113</i>
	 */
	public static void iauNut06a(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps) {
		iauNut06a(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps));
	}
	protected native static void iauNut06a(double date1, double date2, @Ptr long dpsi, @Ptr long deps);
	/**
	 * Original signature : <code>void iauNut80(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:115</i>
	 */
	public static void iauNut80(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps) {
		iauNut80(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps));
	}
	protected native static void iauNut80(double date1, double date2, @Ptr long dpsi, @Ptr long deps);
	/**
	 * Original signature : <code>void iauNutm80(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:117</i>
	 */
	public static void iauNutm80(double date1, double date2, Pointer<Double > rmatn) {
		iauNutm80(date1, date2, Pointer.getPeer(rmatn));
	}
	protected native static void iauNutm80(double date1, double date2, @Ptr long rmatn);
	/**
	 * Original signature : <code>double iauObl06(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:119</i>
	 */
	native public static double iauObl06(double date1, double date2);
